<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/config_title"
        android:id="@+id/tvConfigTitle"
        android:textColor="#ffffffff"
        android:background="#f1252525" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff000000"
        android:onClick="onClickUnit">

        <ImageView
            android:id="@+id/imageViewUnits"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_term_conf"
            android:contentDescription="@string/thermometer_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/degree_unit_conf"
            android:id="@+id/textViewUnits"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffffff"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff000000"
        android:onClick="onClickRefresh">

        <ImageView
            android:id="@+id/imageViewUpdate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_update_config"
            android:contentDescription="@string/watch_image_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time_update_conf"
            android:id="@+id/textViewUpdate"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>